Complete YarnService.java with all methods required by YarnController (checkQueueAlerts, adjustQueueCapacityReal, submitApplication, killApplication)